Fixed issues with build

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -18,10 +18,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
       - uses: dart-lang/setup-dart@v1
 
       - name: Install dependencies
@@ -39,4 +35,6 @@ jobs:
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
       - name: Run tests
-        run: dart test
+        run: dart test --coverage=coverage
+
+      - uses: codecov/codecov-action@v1
