--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,30 +17,31 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        sdk: [stable, beta, dev]
+        channel: [stable, beta, dev]
 
     steps:
       - uses: actions/checkout@v2
-
-      - uses: dart-lang/setup-dart@v1
+      
+      - name: Install Flutter 
+        uses: subosito/flutter-action@v1
         with:
-          sdk: ${{ matrix.sdk }}
+          channel: ${{ matrix.channel }}
 
       - name: Install dependencies
-        run: dart pub get
+        run: flutter pub get
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       - name: Verify formatting
-        run: dart format --output=none --set-exit-if-changed .
+        run: flutter format --set-exit-if-changed .
 
       # Consider passing '--fatal-infos' for slightly stricter analysis.
       - name: Analyze project source
-        run: dart analyze
+        run: flutter analyze
 
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
       - name: Run tests
-        run: dart test --coverage=coverage
+        run: flutter test --coverage
 
       - uses: codecov/codecov-action@v1
