--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,13 @@ dependencies:
   cryptography: ^2.0.1
   encrypt: ^5.0.0
   pointycastle: ^3.0.1
+  pinenacl: ^0.2.0
+  json_annotation: ^4.0.1
 
 dev_dependencies:
   test: ^1.16.8
   coverage: "^1.0.2"
-
+  build_runner: ^2.0.3
+  json_serializable: ^4.1.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
