--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,18 +5,39 @@ homepage:
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   cryptography: ^2.0.1
   encrypt: ^5.0.0
-  pointycastle: ^3.0.1
-  pinenacl: ^0.2.0
   json_annotation: ^4.0.1
+  webcrypto: ^0.5.2
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
-  test: ^1.16.8
   coverage: "^1.0.2"
   build_runner: ^2.0.3
   json_serializable: ^4.1.1
+  flutter_test:
+    sdk: flutter
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+# The following section is specific to Flutter.
+flutter:
+  # This section identifies this Flutter project as a plugin project.
+  # The 'pluginClass' and Android 'package' identifiers should not ordinarily
+  # be modified. They are used by the tooling to maintain consistency when
+  # adding or updating assets for this project.
+  plugin:
+    platforms:
+      # This plugin project was generated without specifying any
+      # platforms with the `--platform` argument. If you see the `some_platform` map below, remove it and
+      # then add platforms following the instruction here:
+      # https://flutter.dev/docs/development/packages-and-plugins/developing-packages#plugin-platforms
+      # -------------------
+      some_platform:
+        pluginClass: somePluginClass
+    # -------------------
