--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=1.20.0"
 
 dependencies:
+  pedantic: ^1.11.0
   cryptography: ^2.0.1
   encrypt: ^5.0.0
   json_annotation: ^4.0.1
