Fixed step for test

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -38,10 +38,8 @@ jobs:
       - name: Analyze project source
         run: flutter analyze
 
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Build json
-        run: flutter pub run webcrypto:setup
-        run: dart test/generateExample.dart
+      - run: flutter pub run webcrypto:setup
+      - run: dart test/generateExample.dart
 
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
