CI: Added hotfix for webcrypto

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -59,6 +59,9 @@ jobs:
       - name: Analyze project source
         run: flutter analyze
 
+      - name: Webcrypto hot fix
+        run: grep -rl 'pkg\[\'rootUri\'\]' ~/.pub-cache/hosted/pub.dartlang.org/webcrypto-0.5.2/bin/setup.dart | xargs sed -i 's/pkg\[\'rootUri\'\]/pkg[\'rootUri\']\+\"\/\"/g'
+
       - run: flutter pub run webcrypto:setup
       - run: dart test/generateExample.dart
 
