--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -40,13 +40,9 @@ jobs:
         with:
           channel: ${{ matrix.channel }}
 
-      - name: Install Linux dependencies
-        if: startsWith(matrix.os, 'ubuntu')
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev libjsoncpp-dev clang
-      - name: Enable desktop support
-        run: flutter config --enable-${{matrix.TARGET}}-desktop
+      - name: Doctor
+        # Run doctor, for ease of debugging any issues.
+        run: flutter doctor -v
 
       - name: Install dependencies
         run: flutter pub get
