--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -56,7 +56,7 @@ jobs:
         run: flutter analyze
 
       - name: Webcrypto hot fix
-        run: grep -rl 'pkg\[\'rootUri\'\]' ~/.pub-cache/hosted/pub.dartlang.org/webcrypto-0.5.2/bin/setup.dart | xargs sed -i 's/pkg\[\'rootUri\'\]/pkg[\'rootUri\']\+\"\/\"/g'
+        run: grep -rl 'pkg\[\'rootUri\'\]' $PUB_CACHE/hosted/pub.dartlang.org/webcrypto-0.5.2/bin/setup.dart | xargs sed -i 's/pkg\[\'rootUri\'\]/pkg[\'rootUri\']\+\"\/\"/g'
 
       - run: flutter pub run webcrypto:setup
       - run: dart test/generateExample.dart
