--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -55,6 +55,9 @@ jobs:
       - name: Analyze project source
         run: flutter analyze
 
+      - name: Debug Fix
+        run: grep 'pkg\[\'rootUri\'\]' $PUB_CACHE/hosted/pub.dartlang.org/webcrypto-0.5.2/bin/setup.dart
+
       - name: Webcrypto hot fix
         run: grep -rl 'pkg\[\'rootUri\'\]' $PUB_CACHE/hosted/pub.dartlang.org/webcrypto-0.5.2/bin/setup.dart | xargs sed -i 's/pkg\[\'rootUri\'\]/pkg[\'rootUri\']\+\"\/\"/g'
 
