--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -13,18 +13,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        channel: [stable, beta, dev]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        channel: [stable, beta]
+        os: [ubuntu-latest]
         include:
-          - os: macos-latest
-            flutter_path: /Users/runner/hostedtoolcache/flutter
-            TARGET: macos
           - os: ubuntu-latest
             flutter_path: /opt/hostedtoolcache/flutter
             TARGET: linux
-          - os: windows-latest
-            flutter_path: C:\hostedtoolcache\windows\flutter
-            TARGET: windows
 
     steps:
       - uses: actions/checkout@v2
