--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -5,30 +5,51 @@
 
 name: Dart
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
         channel: [stable, beta, dev]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - os: macos-latest
+            flutter_path: /Users/runner/hostedtoolcache/flutter
+            TARGET: macos
+          - os: ubuntu-latest
+            flutter_path: /opt/hostedtoolcache/flutter
+            TARGET: linux
+          - os: windows-latest
+            flutter_path: C:\hostedtoolcache\windows\flutter
+            TARGET: windows
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ matrix.flutter_path }}
+          key: ${{ matrix.os }}-{{matrix.channel}}-flutter
+
+      - name: Install dependencies
+        run: flutter pub get
 
       - name: Install Flutter
         uses: subosito/flutter-action@v1
         with:
           channel: ${{ matrix.channel }}
 
-      - name: Install dependencies
-        run: flutter pub get
+      - name: Install Linux dependencies
+        if: startsWith(matrix.os, 'ubuntu')
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libx11-dev pkg-config cmake ninja-build libblkid-dev liblzma-dev libjsoncpp-dev clang
+      - name: Enable desktop support
+        run: flutter config --enable-${{matrix.TARGET}}-desktop
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       - name: Verify formatting
