--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: betro_dart_lib
 description: A new flutter plugin project.
 version: 0.0.1
+publish_to: none
 homepage:
 
 environment:
@@ -10,6 +11,7 @@ environment:
 dependencies:
   lints: ^2.0.0
   cryptography: ^2.0.5
+  collection: ^1.16.0
   encrypt: ^5.0.1
   json_annotation: ^4.6.0
   webcrypto:
